Fix mobile orientation alignments

--- a/src/App.scss
+++ b/src/App.scss
@@ -228,15 +228,24 @@ html {
                 display: flex;
                 flex-direction: column;
                 .bioColumn {
+                    padding: 50px;
                     width: 100%;
                     height: 100%;
-                    border: 1px solid red;
                     position: relative;
                 }
                 .infoColumn {
+                    padding: 50px;
                     width: 100%;
                     height: 100%;
-                    border: 1px solid lime;
+                    h1 {
+                        text-align: center;
+                    }
+                    .projCard {
+                        border: 1px solid red;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                    }
                 }
             }
         }
